perbaikan hasil evaluasi

--- a/dataset.html
+++ b/dataset.html
@@ -118,7 +118,7 @@
             <br>Dengan beragam topik yang disediakan, portal data kota bandung dapat menyediakan dataset sesuai kebutuhanmu!
         </h2>
         <div class="has-search">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" placeholder="Cari Dataset">
           <button class="form-control-feedback"><i class="fas fa-search"></i></button>
         </div>  
       </div> 
@@ -158,12 +158,12 @@
           <a href="lihatdataset.html">
           <button class="hvr3" href="lihatdataset.html"><i class="fas fa-eye"></i> Lihat Dataset</button>
           </a>
-          </a>
-          <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
-          <button class="hvr3 klmbtn2"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <button type="button" class="hvr3" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
             <i class="fas fa-cloud-download-alt"></i> Unduh Dataset
           </button>
+          </a>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"  style="pointer-events: none;"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;" ><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <!-- End Button Aksi --> 
       </div>
       </div>
@@ -177,13 +177,13 @@
             <a class="desk2" href="#">Dinas Kesehatan</a>
             <!-- Start Button Aksi --> 
             <a href="lihatdataset.html">
-          <button class="hvr3" href="lihatdataset.html"><i class="fas fa-eye"></i> Lihat Dataset</button>
-          </a>
-            <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
-            <button class="hvr3 klmbtn2"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
+            <button class="hvr3" href="lihatdataset.html"><i class="fas fa-eye"></i> Lihat Dataset</button>
+            </a>
             <button type="button" class="hvr3" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
               <i class="fas fa-cloud-download-alt"></i> Unduh Dataset
             </button>
+            <button class="hvr3 klmbtn2" style="pointer-events: none;" ><i class="far fa-clock "></i> 2 Hari yang lalu</button>
+            <button class="hvr3 klmbtn2" style="pointer-events: none;" ><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
             <!-- End Button Aksi -->
         </div>
       </div>
@@ -197,13 +197,13 @@
             <a class="desk2" href="#">Dinas Kesehatan</a>
             <!-- Start Button Aksi --> 
             <a href="lihatdataset.html">
-          <button class="hvr3" href="lihatdataset.html"><i class="fas fa-eye"></i> Lihat Dataset</button>
-          </a>
-            <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
-            <button class="hvr3 klmbtn2"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
+            <button class="hvr3" href="lihatdataset.html"><i class="fas fa-eye"></i> Lihat Dataset</button>
+            </a>
             <button type="button" class="hvr3" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
               <i class="fas fa-cloud-download-alt"></i> Unduh Dataset
             </button>
+            <button class="hvr3 klmbtn2" style="pointer-events: none;" ><i class="far fa-clock "></i> 2 Hari yang lalu</button>
+            <button class="hvr3 klmbtn2" style="pointer-events: none;" ><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
             <!-- End Button Aksi --> 
         </div>
       </div>
@@ -219,11 +219,11 @@
             <a href="lihatdataset.html">
             <button class="hvr3" href="lihatdataset.html"><i class="fas fa-eye"></i> Lihat Dataset</button>
             </a>
-            <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
-            <button class="hvr3 klmbtn2"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
             <button type="button" class="hvr3" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
               <i class="fas fa-cloud-download-alt"></i> Unduh Dataset
             </button>
+            <button class="hvr3 klmbtn2" style="pointer-events: none;" ><i class="far fa-clock "></i> 2 Hari yang lalu</button>
+            <button class="hvr3 klmbtn2" style="pointer-events: none;" ><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
             <!-- End Button Aksi --> 
         </div>
       </div>
@@ -237,13 +237,13 @@
             <a class="desk2" href="#">Dinas Kesehatan</a>
             <!-- Start Button Aksi --> 
             <a href="lihatdataset.html">
-          <button class="hvr3" href="lihatdataset.html"><i class="fas fa-eye"></i> Lihat Dataset</button>
-          </a>
-            <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
-            <button class="hvr3 klmbtn2"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
+            <button class="hvr3" href="lihatdataset.html"><i class="fas fa-eye"></i> Lihat Dataset</button>
+            </a>
             <button type="button" class="hvr3" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
               <i class="fas fa-cloud-download-alt"></i> Unduh Dataset
             </button>
+            <button class="hvr3 klmbtn2" style="pointer-events: none;" ><i class="far fa-clock "></i> 2 Hari yang lalu</button>
+            <button class="hvr3 klmbtn2" style="pointer-events: none;" ><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
             <!-- End Button Aksi --> 
         </div>
       </div>
@@ -257,13 +257,13 @@
             <a class="desk2" href="#">Dinas Kesehatan</a>
             <!-- Start Button Aksi --> 
             <a href="lihatdataset.html">
-          <button class="hvr3" href="lihatdataset.html"><i class="fas fa-eye"></i> Lihat Dataset</button>
-          </a>
-            <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
-            <button class="hvr3 klmbtn2"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
+            <button class="hvr3" href="lihatdataset.html"><i class="fas fa-eye"></i> Lihat Dataset</button>
+            </a>
             <button type="button" class="hvr3" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
               <i class="fas fa-cloud-download-alt"></i> Unduh Dataset
             </button>
+            <button class="hvr3 klmbtn2" style="pointer-events: none;" ><i class="far fa-clock "></i> 2 Hari yang lalu</button>
+            <button class="hvr3 klmbtn2" style="pointer-events: none;" ><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
             <!-- End Button Aksi --> 
         </div>
       </div>
@@ -275,7 +275,7 @@
           <div class="modal-content">
             <div class="modal-body">
               <img src="assets/image/alert unduh.png" alt="">
-              <h3 class="texalert">Dataset Berhasil di Unduh</h3>
+              <h3 class="texalert">Dataset Berhasil diunduh</h3>
               <button type="button" class="btnalrt" data-mdb-dismiss="modal">OK</button>
             </div>
           </div>
@@ -370,9 +370,9 @@
       <div class="row">
         <div class="col-md-12 col-lg-12 col-xl-12 mx-auto" style="padding: 0px;">
           <div class="mt-4">
-            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
+            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrabdg.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrasd.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitradsk.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
           </div>
         </div>
       </div>
