--- a/lihatdataset.html
+++ b/lihatdataset.html
@@ -124,7 +124,6 @@
           </div>
         </div>
       </div>
-      <img class="vectordtset" width="300px" src="assets/image/vector3.png">   
     </section>
     <!--::: End Section Deskripsi Website :::-->
 
@@ -190,7 +189,7 @@
         <div class="p-2 w-100">
           <h4 class="dttitle2">Tahun 2021 - Data Jumlah Kasus Filariasis di Kota Bandung</h4>
             <a href="pratinjau data rev.html"><button class="hvr3" ><i class="fas fa-eye"></i> Pratinjau</button></a>
-            <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 6 Bulan yang lalu</button>
+            <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-clock "></i> 6 Bulan yang lalu</button>
         </div>
         <div class="dropdown" id="dd-unduh">
           <ul class="dropdown-unduh ms-auto">
@@ -220,7 +219,7 @@
         <div class="p-2 w-100">
           <h4 class="dttitle2">Tahun 2020 - Data Jumlah Kasus Filariasis di Kota Bandung</h4>
           <a href="pratinjau data rev.html"><button class="hvr3" ><i class="fas fa-eye"></i> Pratinjau</button></a>
-          <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 6 Bulan yang lalu</button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-clock "></i> 6 Bulan yang lalu</button>
         </div>
         <div class="dropdown" id="dd-unduh">
           <ul class="dropdown-unduh ms-auto">
@@ -250,7 +249,7 @@
         <div class="p-2 w-100">
           <h4 class="dttitle2">Tahun 2019 - Data Jumlah Kasus Filariasis di Kota Bandung</h4>
           <a href="pratinjau data rev.html"><button class="hvr3" ><i class="fas fa-eye"></i> Pratinjau</button></a>
-          <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 6 Bulan yang lalu</button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-clock "></i> 6 Bulan yang lalu</button>
         </div>
         <div class="dropdown" id="dd-unduh">
           <ul class="dropdown-unduh ms-auto">
@@ -280,7 +279,7 @@
         <div class="p-2 w-100">
           <h4 class="dttitle2">Tahun 2018 - Data Jumlah Kasus Filariasis di Kota Bandung</h4>
           <a href="pratinjau data rev.html"><button class="hvr3" ><i class="fas fa-eye"></i> Pratinjau</button></a>
-          <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 6 Bulan yang lalu</button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-clock "></i> 6 Bulan yang lalu</button>
         </div>
         <div class="dropdown" id="dd-unduh">
           <ul class="dropdown-unduh ms-auto">
@@ -305,7 +304,7 @@
           </ul>
         </div>
       </div>
-      <img class="vectorlhtdtset" width="250px" src="assets/image/vector4.png">
+      <img class="vectorlhtdtset" src="assets/image/vector4.png">
 
       <!--Start Modal Button-->
       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -313,7 +312,7 @@
           <div class="modal-content">
             <div class="modal-body">
               <img src="assets/image/alert unduh.png" alt="">
-              <h3 class="texalert">Data CSV Berhasil di Unduh</h3>
+              <h3 class="texalert">Data CSV Berhasil diunduh</h3>
               <button type="button" class="btnalrt" data-mdb-dismiss="modal">OK</button>
             </div>
           </div>
@@ -325,7 +324,7 @@
           <div class="modal-content">
             <div class="modal-body">
               <img src="assets/image/alert unduh.png" alt="">
-              <h3 class="texalert">Data API Berhasil di Unduh</h3>
+              <h3 class="texalert">Data API Berhasil diunduh</h3>
               <button type="button" class="btnalrt" data-mdb-dismiss="modal">OK</button>
             </div>
           </div>
@@ -420,9 +419,9 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-xl-12 mx-auto" style="padding: 0px;">
         <div class="mt-4">
-          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
+          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrabdg.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrasd.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitradsk.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
         </div>
       </div>
     </div>
