--- a/pratinjau data rev-matadata.html
+++ b/pratinjau data rev-matadata.html
@@ -110,11 +110,6 @@
         <h1 class="descdtset1-2">
           Data Jumlah Kasus Filariasis di Kota Bandung Tahun 2015 
         </h1>
-        <a href="lihatdataset.html">
-          <h2 class="descdtset2-2">
-          Dataset Jumlah Kasus Filariasis (Kaki Gajah) di Kota Bandung
-          </h2>
-        </a>
         <div class="d-flex align-items-center boxlhtdt">
           <div class="flex-shrink-0 flexlhtdt">
             <div class="g-col-6 g-col-md-4"></div>
@@ -128,63 +123,62 @@
             -->
           </div>
         </div>
-      </div>
-      <img class="vectordtset" width="300px" src="assets/image/vector3.png">  
+      </div> 
     </section>
     <!--::: End Section Deskripsi Website :::-->
 
     <!--::: Section Hasil Evaluasi Dataset Website :::-->
     <section class="content-dtset content-fluid">
-      <div class="card card-h">
-        <div class="card-header card-h2">
-          <div class="col-12">
-            <ul class="nav-pills nav nav-h" role="tablist">
-              <li class="nav-item">
-                <a href="pratinjau data rev.html" id="ngb-nav-3" class="nav-link active actived" >
-                  Tentang Data
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="#" id="ngb-nav-3" class="nav-link active actived actv">
-                  Metadata
-                </a>
-              </li>
-            </ul>
+        <div class="card card-h">
+            <div class="card-header card-h2">
+              <div class="col-12">
+                <ul class="nav-pills nav nav-h" role="tablist">
+                  <li class="nav-item">
+                    <a href="pratinjau data rev.html" id="ngb-nav-3" class="nav-link active actived" >
+                      Tentang Data
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="pratinjau data rev-matadata.html" id="ngb-nav-3" class="nav-link active actived actv">
+                      Metadata
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <hr style=" padding-left: 0px; margin: 0px; color: rgba(0, 0, 0, 0.25);">
+    
+            <div class="table-responsive" style="padding-left: 28px; padding-right: 24px;margin-top: 20px; margin-bottom: 20px;"> 
+              <table class="tdatainfo">
+                <tr style="color: black;">
+                  <th>Kolom <a href="#"></th>
+                  <th>Nilai <a href="#"></th>
+                </tr>
+                <tr>
+                  <td style="padding-right: 100px;">Tanggal Evaluasi Terakhir</td>
+                  <td>11 Desember 2019</td>
+                <tr>
+                  <td>Ketersediaan</td>
+                  <td>100%</td>
+                </tr>
+                <tr>
+                  <td>Cakupan Data</td>
+                  <td>Belum pernah dievaluasi sebelumnya</td>
+                </tr>
+                <tr>
+                  <td>Biaya</td>
+                  <td>Rp. 0,-</td>
+                </tr>
+                <tr>
+                  <td>Terakhir Diperbaharui</td>
+                  <td>5 Agustus 2022</td>
+                </tr>
+              </table>
+            </div>
           </div>
-        </div>
-        <hr style=" padding-left: 0px; margin: 0px; color: rgba(0, 0, 0, 0.25);">
-
-        <div class="table-responsive" style="padding-left: 28px; padding-right: 24px;margin-top: 20px; margin-bottom: 20px;"> 
-          <table class="tdatainfo">
-            <tr style="color: black;">
-              <th>Kolom <a href="#"></th>
-              <th>Nilai <a href="#"></th>
-            </tr>
-            <tr>
-              <td style="padding-right: 100px;"">Tanggal Evaluasi Terakhir</td>
-              <td>11 Desember 2019</td>
-            <tr>
-              <td>Ketersediaan</td>
-              <td>100%</td>
-            </tr>
-            <tr>
-              <td>Cakupan Data</td>
-              <td>Belum pernah dievaluasi sebelumnya</td>
-            </tr>
-            <tr>
-              <td>Biaya</td>
-              <td>Rp. 0,-</td>
-            </tr>
-            <tr>
-              <td>Terakhir Diperbaharui</td>
-              <td>5 Agustus 2022</td>
-            </tr>
-          </table>
-        </div>
-      </div>
     </section>
     <!--::: End Section Hasil Evaluasi Dataset Website :::-->
-
+    
     <!--::: Section Hasil Evaluasi Dataset Website :::-->
     <section class="content-dtset content-fluid">
         <div class="card card-h">
@@ -193,20 +187,20 @@
             <a href="#" class="klmdata"><i class="fa-regular fa-copy"></i> Salin Atribusi</a>
             <button type="button" class="klmdata" data-mdb-toggle="modal" data-mdb-target="#exampleModal2">
               <i class="fas fa-cloud-download-alt"></i> Unduh Data
-            </button>  
+            </button> 
             <div class="has-search2" style="float: right;">
-              <input type="text" class="form-control" placeholder=" Search">
+              <input type="text" class="form-control" placeholder="Cari Data">
               <button class="form-control-feedback2"><i style="font-size: 20px;" class="fas fa-search float-start"></i></button>
             </div>  
           </div>
           <div class="table-responsive tbdata" style="padding-left: 50px; padding-right: 24px;margin-top: 20px;"> 
             <table class="table table-borderless">
-              <tr style="background-color: #B0DEFF;;">
-                <th>Kode Kecamatan <a href="#"><i class="fa-solid fa-sort" style=""></i> </th>
-                <th>Kecamatan <a href="#"><i class="fa-solid fa-sort" style=""></i></th>
-                <th>Puskesmas <a href="#"><i class="fa-solid fa-sort" style=""></i></th>
-                <th>Jumlah Kasus Baru <a href="#"><i class="fa-solid fa-sort" style=""></i></th>
-                <th>Total <a href="#"><i class="fa-solid fa-sort" style=""></i></th>
+              <tr style="background-color: #B0DEFF; position: static;">
+                <th style="font-weight: 600;">Kode Kecamatan <a href="#"><i class="fa-solid fa-sort"></i> </th>
+                <th style="font-weight: 600;">Kecamatan <a href="#"><i class="fa-solid fa-sort"></i></th>
+                <th style="font-weight: 600;">Puskesmas <a href="#"><i class="fa-solid fa-sort" style=""></i></th>
+                <th style="font-weight: 600;">Jumlah Kasus Baru <a href="#"><i class="fa-solid fa-sort"></i></th>
+                <th style="font-weight: 600;">Total <a href="#"><i class="fa-solid fa-sort" ></i></th>
               </tr>
               <tr>
                 <td>32.73.01</td>
@@ -303,7 +297,7 @@
       </h1>
       <div class="row boxrek">
         <div class="col-sm-6">
-          <div class="card" style="width: auto;">
+          <div class="card" style="width: auto; box-shadow: 2px 3px 5px 1px rgba(0, 0, 0, 0.25) !important">
             <div class="card-body justify-content-between">
               <div class="row consboxrek">
                 <div class="col-sm-4 col-md-4 col-lg-4 col-xl-3">
@@ -314,7 +308,7 @@
                 <div class="col-sm-8 col-sm-8 col-md-8 col-lg-8 col-xl-9" style="margin-top: auto; margin-bottom: auto;">
                   <div class="flex-grow-1 ms-3">
                     <div>
-                      <a class="dttitle" href="#">Kerb Terpelihara di Kecamatan Mandalajati Kota Bandung</a>
+                      <a class="dttitle-lhtd" href="#">Kerb Terpelihara di Kecamatan Mandalajati Kota Bandung</a>
                     </div>
                     <div>
                       <a href="lihatdataset.html">
@@ -333,7 +327,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card" style="width: auto;">
+          <div class="card" style="width: auto; box-shadow: 2px 3px 5px 1px rgba(0, 0, 0, 0.25) !important">
             <div class="card-body justify-content-between">
               <div class="row consboxrek">
                 <div class="col-sm-4 col-md-4 col-lg-4 col-xl-3">
@@ -344,7 +338,7 @@
                 <div class="col-sm-8 col-sm-8 col-md-8 col-lg-8 col-xl-9" style="margin-top: auto;  margin-bottom: auto;">
                   <div class="flex-grow-1 ms-3">
                     <div>
-                      <a class="dttitle" href="#">Perpustakaan di Kecamatan 
+                      <a class="dttitle-lhtd" href="#">Perpustakaan di Kecamatan 
                         Mandalajati Kota Bandung</a>
                     </div>
                     <div>
@@ -370,7 +364,7 @@
           <div class="modal-content">
             <div class="modal-body">
               <img src="assets/image/alert unduh.png" alt="">
-              <h3 class="texalert">Dataset Berhasil di Unduh</h3>
+              <h3 class="texalert">Dataset Berhasil diunduh</h3>
               <button type="button" class="btnalrt" data-mdb-dismiss="modal">OK</button>
             </div>
           </div>
@@ -381,7 +375,7 @@
           <div class="modal-content">
             <div class="modal-body">
               <img src="assets/image/alert unduh.png" alt="">
-              <h3 class="texalert">Data Berhasil di Unduh</h3>
+              <h3 class="texalert">Data Berhasil diunduh</h3>
               <button type="button" class="btnalrt" data-mdb-dismiss="modal">OK</button>
             </div>
           </div>
@@ -454,9 +448,9 @@
       <div class="row">
         <div class="col-md-12 col-lg-12 col-xl-12 mx-auto" style="padding: 0px;">
           <div class="mt-4">
-            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
+            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrabdg.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrasd.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitradsk.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
           </div>
         </div>
       </div>
