--- a/pratinjau data rev.html
+++ b/pratinjau data rev.html
@@ -110,11 +110,6 @@
         <h1 class="descdtset1-2">
           Data Jumlah Kasus Filariasis di Kota Bandung Tahun 2015 
         </h1>
-        <a href="lihatdataset.html">
-          <h2 class="descdtset2-2">
-          Dataset Jumlah Kasus Filariasis (Kaki Gajah) di Kota Bandung
-          </h2>
-        </a>
         <div class="d-flex align-items-center boxlhtdt">
           <div class="flex-shrink-0 flexlhtdt">
             <div class="g-col-6 g-col-md-4"></div>
@@ -129,7 +124,6 @@
           </div>
         </div>
       </div>
-      <img class="vectordtset" width="300px" src="assets/image/vector3.png">  
     </section>
     <!--::: End Section Deskripsi Website :::-->
 
@@ -140,7 +134,7 @@
               <div class="col-12">
                 <ul class="nav-pills nav nav-h" role="tablist">
                   <li class="nav-item">
-                    <a href="#" id="ngb-nav-3" class="nav-link active actived actv" >
+                    <a href="pratinjau data rev.html" id="ngb-nav-3" class="nav-link active actived actv" >
                       Tentang Data
                     </a>
                   </li>
@@ -196,12 +190,12 @@
           </div>
           <div class="table-responsive tbdata" style="padding-left: 50px; padding-right: 24px;margin-top: 20px;"> 
             <table class="table table-borderless">
-              <tr style="background-color: #B0DEFF;;">
-                <th>Kode Kecamatan <a href="#"><i class="fa-solid fa-sort" style=""></i> </th>
-                <th>Kecamatan <a href="#"><i class="fa-solid fa-sort" style=""></i></th>
-                <th>Puskesmas <a href="#"><i class="fa-solid fa-sort" style=""></i></th>
-                <th>Jumlah Kasus Baru <a href="#"><i class="fa-solid fa-sort" style=""></i></th>
-                <th>Total <a href="#"><i class="fa-solid fa-sort" style=""></i></th>
+              <tr style="background-color: #B0DEFF; position: static;">
+                <th style="font-weight: 600;">Kode Kecamatan <a href="#"><i class="fa-solid fa-sort"></i> </th>
+                <th style="font-weight: 600;">Kecamatan <a href="#"><i class="fa-solid fa-sort"></i></th>
+                <th style="font-weight: 600;">Puskesmas <a href="#"><i class="fa-solid fa-sort" style=""></i></th>
+                <th style="font-weight: 600;">Jumlah Kasus Baru <a href="#"><i class="fa-solid fa-sort"></i></th>
+                <th style="font-weight: 600;">Total <a href="#"><i class="fa-solid fa-sort" ></i></th>
               </tr>
               <tr>
                 <td>32.73.01</td>
@@ -298,7 +292,7 @@
       </h1>
       <div class="row boxrek">
         <div class="col-sm-6">
-          <div class="card" style="width: auto;">
+          <div class="card" style="width: auto; box-shadow: 2px 3px 5px 1px rgba(0, 0, 0, 0.25) !important">
             <div class="card-body justify-content-between">
               <div class="row consboxrek">
                 <div class="col-sm-4 col-md-4 col-lg-4 col-xl-3">
@@ -309,7 +303,7 @@
                 <div class="col-sm-8 col-sm-8 col-md-8 col-lg-8 col-xl-9" style="margin-top: auto; margin-bottom: auto;">
                   <div class="flex-grow-1 ms-3">
                     <div>
-                      <a class="dttitle" href="#">Kerb Terpelihara di Kecamatan Mandalajati Kota Bandung</a>
+                      <a class="dttitle-lhtd" href="#">Kerb Terpelihara di Kecamatan Mandalajati Kota Bandung</a>
                     </div>
                     <div>
                       <a href="lihatdataset.html">
@@ -328,7 +322,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card" style="width: auto;">
+          <div class="card" style="width: auto; box-shadow: 2px 3px 5px 1px rgba(0, 0, 0, 0.25) !important">
             <div class="card-body justify-content-between">
               <div class="row consboxrek">
                 <div class="col-sm-4 col-md-4 col-lg-4 col-xl-3">
@@ -339,7 +333,7 @@
                 <div class="col-sm-8 col-sm-8 col-md-8 col-lg-8 col-xl-9" style="margin-top: auto;  margin-bottom: auto;">
                   <div class="flex-grow-1 ms-3">
                     <div>
-                      <a class="dttitle" href="#">Perpustakaan di Kecamatan 
+                      <a class="dttitle-lhtd" href="#">Perpustakaan di Kecamatan 
                         Mandalajati Kota Bandung</a>
                     </div>
                     <div>
@@ -365,7 +359,7 @@
           <div class="modal-content">
             <div class="modal-body">
               <img src="assets/image/alert unduh.png" alt="">
-              <h3 class="texalert">Dataset Berhasil di Unduh</h3>
+              <h3 class="texalert">Dataset Berhasil diunduh</h3>
               <button type="button" class="btnalrt" data-mdb-dismiss="modal">OK</button>
             </div>
           </div>
@@ -376,7 +370,7 @@
           <div class="modal-content">
             <div class="modal-body">
               <img src="assets/image/alert unduh.png" alt="">
-              <h3 class="texalert">Data Berhasil di Unduh</h3>
+              <h3 class="texalert">Data Berhasil diunduh</h3>
               <button type="button" class="btnalrt" data-mdb-dismiss="modal">OK</button>
             </div>
           </div>
@@ -449,9 +443,9 @@
       <div class="row">
         <div class="col-md-12 col-lg-12 col-xl-12 mx-auto" style="padding: 0px;">
           <div class="mt-4">
-            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
+            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrabdg.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrasd.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitradsk.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
           </div>
         </div>
       </div>
