--- a/grup.html
+++ b/grup.html
@@ -115,10 +115,10 @@
         Temukan kebutuhan datasetmu dengan pengelompokkan dataset berdasarkan grup!
       </h2>
       <div class="has-search">
-        <input type="text" class="form-control" placeholder="Search">
+        <input type="text" class="form-control" placeholder="Cari Grup">
         <button class="form-control-feedback"><i class="fas fa-search"></i></button>
       </div> 
-      <img class="vectordtset width="300px" src="assets/image/vector3.png">  
+      <img class="vectordtset" src="assets/image/vector3.png">  
     </section>
     <!--::: End Section Deskripsi Website :::-->
 
@@ -145,10 +145,10 @@
         <div class="col col-6 mb-4">
           <div class="thumbnail">
             <div class="img1">
-              <a href="administrasi.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/administrasi.png" style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 25px;"></a>
+              <a href="administrasi.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/administrasi.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
             </div>
             <div class="img2">
-              <a href="administrasi.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoveradm.png" style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 25px;"></a>
+              <a href="administrasi.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoveradm.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
             </div>
             <div class="label-ds text-center mt-3">
               Administrasi Pemerintahan
@@ -158,10 +158,10 @@
         <div class="col col-6 mb-4">
           <div class="thumbnail">
             <div class="img1">
-              <a href="ekonomi.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/ekonomi.png" style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
+              <a href="ekonomi.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/ekonomi.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
             </div>
             <div class="img2">
-              <a href="ekonomi.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoverekonomi.png" style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
+              <a href="ekonomi.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoverekonomi.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
             </div>
             <div class="label-ds text-center mt-3">
               Ekonomi dan Keuangan
@@ -171,10 +171,10 @@
         <div class="col col-6 mb-4">
           <div class="thumbnail">
             <div class="img1">
-              <a href="infrastruktur.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/infrastruktur.png" style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
+              <a href="infrastruktur.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/infrastruktur.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
             </div>
             <div class="img2">
-              <a href="infrastruktur.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoverinfra.png" style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 25px;"></a>
+              <a href="infrastruktur.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoverinfra.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
             </div>
             <div class="label-ds text-center mt-3">
               Infrastruktur
@@ -184,10 +184,10 @@
         <div class="col col-6 mb-4">
           <div class="thumbnail">
             <div class="img1">
-              <a href="kependudukan.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/kependudukan.png" style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
+              <a href="kependudukan.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/kependudukan.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
             </div>
             <div class="img2">
-              <a href="kependudukan.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoverkependudukan.png" style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
+              <a href="kependudukan.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoverkependudukan.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
             </div>
             <div class="label-ds text-center mt-3">
               Kependudukan
@@ -197,10 +197,10 @@
         <div class="col col-6 mb-4">
           <div class="thumbnail">
             <div class="img1">
-              <a href="kesehatan.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/kesehatan.png" style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
+              <a href="kesehatan.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/kesehatan.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px;"></a>
             </div>
             <div class="img2">
-              <a href="kesehatan.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoverkesehatan.png" style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
+              <a href="kesehatan.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoverkesehatan.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
             </div>
             <div class="label-ds text-center mt-3">
               Kesehatan
@@ -210,10 +210,10 @@
         <div class="col col-6 mb-4">
           <div class="thumbnail">
             <div class="img1">
-              <a href="lingkungan.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/lingkungan.png" style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 25px;"></a>
+              <a href="lingkungan.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/lingkungan.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px;"></a>
             </div>
             <div class="img2">
-              <a href="lingkungan.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoverlingkungan.png" style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
+              <a href="lingkungan.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoverlingkungan.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
             </div>
             <div class="label-ds text-center mt-3">
               Lingkungan Hidup
@@ -223,10 +223,10 @@
         <div class="col col-6 mb-4">
           <div class="thumbnail">
             <div class="img1">
-              <a href="pendidikan.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/pendidikan.png" style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 25px;"></a>
+              <a href="pendidikan.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/pendidikan.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px;"></a>
             </div>
             <div class="img2">
-              <a href="pendidikan.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoverpendidikan.png" style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
+              <a href="pendidikan.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoverpendidikan.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
             </div>
             <div class="label-ds text-center mt-3">
               Pendidikan
@@ -236,10 +236,10 @@
         <div class="col col-6 mb-4">
           <div class="thumbnail">
             <div class="img1">
-              <a href="sosial.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/sosial.png" style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
+              <a href="sosial.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/sosial.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
             </div>
             <div class="img2">
-              <a href="sosial.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoversosial.png" style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 25px;"></a>
+              <a href="sosial.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoversosial.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px;"></a>
             </div>
             <div class="label-ds text-center mt-3">
               Sosial
@@ -312,9 +312,9 @@
       <div class="row">
         <div class="col-md-12 col-lg-12 col-xl-12 mx-auto" style="padding: 0px;">
           <div class="mt-4">
-            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
+            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrabdg.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrasd.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitradsk.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
           </div>
         </div>
       </div>
