--- a/lihatdataset-matadata.html
+++ b/lihatdataset-matadata.html
@@ -327,7 +327,7 @@
           <div class="modal-content">
             <div class="modal-body">
               <img src="assets/image/alert unduh.png" alt="">
-              <h3 class="texalert">Data CSV Berhasil di Unduh</h3>
+              <h3 class="texalert">Data CSV Berhasil diunduh</h3>
               <button type="button" class="btnalrt" data-mdb-dismiss="modal">OK</button>
             </div>
           </div>
@@ -339,7 +339,7 @@
           <div class="modal-content">
             <div class="modal-body">
               <img src="assets/image/alert unduh.png" alt="">
-              <h3 class="texalert">Data API Berhasil di Unduh</h3>
+              <h3 class="texalert">Data API Berhasil diunduh</h3>
               <button type="button" class="btnalrt" data-mdb-dismiss="modal">OK</button>
             </div>
           </div>
@@ -434,9 +434,9 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-xl-12 mx-auto" style="padding: 0px;">
         <div class="mt-4">
-          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
+          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrabdg.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrasd.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitradsk.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
         </div>
       </div>
     </div>
