--- a/lihatdatasetorg.html
+++ b/lihatdatasetorg.html
@@ -140,7 +140,7 @@
           </div>
       </div>
       <div class="has-search" style="margin-top: 40px;">
-        <input type="text" class="form-control" placeholder="Search">
+        <input type="text" class="form-control" placeholder="Cari Dataset">
         <button class="form-control-feedback"><i class="fas fa-search"></i></button>
       </div>  
     
@@ -178,11 +178,11 @@
           <a href="lihatdataset.html">
             <button class="hvr3"><i class="fas fa-eye"></i> Lihat Dataset</button>
           </a>
-          <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
-          <button class="hvr3 klmbtn2"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <button type="button" class="hvr3" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
             <i class="fas fa-cloud-download-alt"></i> Unduh Dataset
           </button>
+          <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
+          <button class="hvr3 klmbtn2"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <!-- End Button Aksi -->
       </div>
     </div>
@@ -198,11 +198,11 @@
           <a href="lihatdataset.html">
             <button class="hvr3"><i class="fas fa-eye"></i> Lihat Dataset</button>
           </a>
-          <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
-          <button class="hvr3 klmbtn2"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <button type="button" class="hvr3" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
             <i class="fas fa-cloud-download-alt"></i> Unduh Dataset
           </button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <!-- End Button Aksi -->
       </div>
     </div>
@@ -218,11 +218,11 @@
           <a href="lihatdataset.html">
             <button class="hvr3"><i class="fas fa-eye"></i> Lihat Dataset</button>
           </a>
-          <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
-          <button class="hvr3 klmbtn2"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <button type="button" class="hvr3" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
             <i class="fas fa-cloud-download-alt"></i> Unduh Dataset
           </button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <!-- End Button Aksi -->
       </div>
     </div>
@@ -239,11 +239,11 @@
           <a href="lihatdataset.html">
             <button class="hvr3"><i class="fas fa-eye"></i> Lihat Dataset</button>
           </a>
-          <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
-          <button class="hvr3 klmbtn2"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <button type="button" class="hvr3" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
             <i class="fas fa-cloud-download-alt"></i> Unduh Dataset
           </button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <!-- End Button Aksi -->
       </div>
     </div>
@@ -260,11 +260,11 @@
           <a href="lihatdataset.html">
             <button class="hvr3"><i class="fas fa-eye"></i> Lihat Dataset</button>
           </a>
-          <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
-          <button class="hvr3 klmbtn2"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <button type="button" class="hvr3" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
             <i class="fas fa-cloud-download-alt"></i> Unduh Dataset
           </button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <!-- End Button Aksi -->
       </div>
     </div>
@@ -281,11 +281,11 @@
           <a href="lihatdataset.html">
             <button class="hvr3"><i class="fas fa-eye"></i> Lihat Dataset</button>
           </a>
-          <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
-          <button class="hvr3 klmbtn2"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <button type="button" class="hvr3" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
             <i class="fas fa-cloud-download-alt"></i> Unduh Dataset
           </button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <!-- End Button Aksi -->
       </div>
     </div>
@@ -302,11 +302,11 @@
           <a href="lihatdataset.html">
             <button class="hvr3"><i class="fas fa-eye"></i> Lihat Dataset</button>
           </a>
-          <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
-          <button class="hvr3 klmbtn2"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <button type="button" class="hvr3" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
             <i class="fas fa-cloud-download-alt"></i> Unduh Dataset
           </button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <!-- End Button Aksi -->
       </div>
     </div>
@@ -323,11 +323,11 @@
           <a href="lihatdataset.html">
             <button class="hvr3"><i class="fas fa-eye"></i> Lihat Dataset</button>
           </a>
-          <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
-          <button class="hvr3 klmbtn2"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <button type="button" class="hvr3" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
             <i class="fas fa-cloud-download-alt"></i> Unduh Dataset
           </button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <!-- End Button Aksi -->
       </div>
       </div>
@@ -344,11 +344,11 @@
           <a href="lihatdataset.html">
             <button class="hvr3"><i class="fas fa-eye"></i> Lihat Dataset</button>
           </a>
-          <button class="hvr3 klmbtn2"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
-          <button class="hvr3 klmbtn2"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <button type="button" class="hvr3" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
             <i class="fas fa-cloud-download-alt"></i> Unduh Dataset
           </button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-clock "></i> 2 Hari yang lalu</button>
+          <button class="hvr3 klmbtn2" style="pointer-events: none;"><i class="far fa-file-alt klmbtn"></i> Berisi 1 Data</button>
           <!-- End Button Aksi -->
         </div>
         </div>
@@ -378,7 +378,7 @@
           <div class="modal-content">
             <div class="modal-body">
               <img src="assets/image/alert unduh.png" alt="">
-              <h3 class="texalert">Dataset Berhasil di Unduh</h3>
+              <h3 class="texalert">Dataset Berhasil diunduh</h3>
               <button type="button" class="btnalrt" data-mdb-dismiss="modal">OK</button>
             </div>
           </div>
@@ -472,9 +472,9 @@
     <div class="row">
       <div class="col-md-12 col-lg-12 col-xl-12 mx-auto" style="padding: 0px;">
         <div class="mt-4">
-          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
+          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrabdg.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrasd.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+          <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitradsk.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
         </div>
       </div>
     </div>
