--- a/organisasi.html
+++ b/organisasi.html
@@ -107,20 +107,20 @@
 
   <!--::: Section Deskripsi Website :::-->
   <section class="decsription content-fluid">
-    <h1 class="desc1">
+    <h1 class="descdtset1">
       Organisasi
     </h1>
     <div style="">
-      <h2 class="desc3">
-          <br>Organisasi adalah  institusi yang menjadi pengelola data masing-masing sektor. Berbagai organisasi telah disediakan untuk memudahkan keperluan datamu. <br>
-          Portal Data Kota Bandung dapat menyediakan Organisasi sesuai kebutuhanmu!
+      <h2 class="descdtset3" style="padding-top: 20px
+      ;">
+          Organisasi adalah  institusi yang menjadi pengelola data masing-masing sektor. Berbagai organisasi telah disediakan untuk memudahkan keperluan datamu. Portal Data Kota Bandung dapat menyediakan Organisasi sesuai kebutuhanmu!
       </h2>
-      <div class="has-search" style="margin-bottom: 50px;">
-        <input type="text" class="form-control" placeholder="Search">
+      <div class="has-search">
+        <input type="text" class="form-control" placeholder="Cari Dataset">
         <button class="form-control-feedback"><i class="fas fa-search"></i></button>
       </div>  
-    </div> 
-    <img class="vectorawalor" width="300px" src="assets/image/vector3.png">   
+    </div>
+    <img class="vectordtset" width="300px" src="assets/image/vector3.png">  
   </section>
   <!--::: End Section Deskripsi Website :::-->
 
@@ -286,7 +286,7 @@
   <!--::: End Section Pagination :::-->
 
 <!--::: Section FOOTER :::-->
- <footer class="text-center text-lg-start text-white" style="position:relative; background-color: #F0EEEE;">
+<footer class="text-center text-lg-start text-white" style="position:relative; background-color: #F0EEEE;">
   <!-- Grid container -->
   <div class="container p-4 pb-0">
   <!-- Section: Links -->
@@ -348,9 +348,9 @@
   <div class="row">
     <div class="col-md-12 col-lg-12 col-xl-12 mx-auto" style="padding: 0px;">
       <div class="mt-4">
-        <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-        <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-        <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
+        <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrabdg.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+        <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrasd.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+        <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitradsk.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
       </div>
     </div>
   </div>
