--- a/organisasi2.html
+++ b/organisasi2.html
@@ -286,7 +286,7 @@
   <!--::: End Section Pagination :::-->
 
 <!--::: Section FOOTER :::-->
- <footer class="text-center text-lg-start text-white" style="position:relative; background-color: #F0EEEE;">
+<footer class="text-center text-lg-start text-white" style="position:relative; background-color: #F0EEEE;">
   <!-- Grid container -->
   <div class="container p-4 pb-0">
   <!-- Section: Links -->
@@ -348,9 +348,9 @@
   <div class="row">
     <div class="col-md-12 col-lg-12 col-xl-12 mx-auto" style="padding: 0px;">
       <div class="mt-4">
-        <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-        <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-        <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
+        <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrabdg.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+        <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrasd.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+        <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitradsk.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
       </div>
     </div>
   </div>
